--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "clsx": "^2.1.1",
     "firebase": "^11.6.1",
     "framer-motion": "^12.9.4",
     "react": "^19.0.0",
